--- a/index.html
+++ b/index.html
@@ -4,9 +4,44 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <h4>Hello there!</h4>
+    <header>
+      <h4>Quiz App</h4>
+    </header>
+    <main class="main-content">
+      <section class="card-section">
+        <article class="quiz-card --einstein">
+          <a class="card-title" href="#">Einstein</a>
+        </article>
+        <article class="quiz-card --alaska">
+          <a class="card-title" href="#">Alaska</a>
+        </article>
+        <article class="quiz-card --moon">
+          <a class="card-title" href="#">Moon</a>
+        </article>
+        <article class="quiz-card --sanfran">
+          <a class="card-title" href="#">San Francisco</a>
+        </article>
+        <article class="quiz-card --android">
+          <a class="card-title" href="#">Android</a>
+        </article>
+        <article class="quiz-card --nintendo">
+          <a class="card-title" href="#">Nintendo</a>
+        </article>
+        <article class="quiz-card --pantone">
+          <a class="card-title" href="#">Pantone</a>
+        </article>
+        <article class="quiz-card --microwave">
+          <a class="card-title" href="#">Microwave</a>
+        </article>
+      </section>
+    </main>
+    <footer class="footer">
+      <img src="./assets/home.svg" alt="Home" />
+      <img src="./assets/bookmark.svg" alt="Bookmarks" />
+      <img src="./assets/profile.svg" alt="Profile" />
+    </footer>
   </body>
 </html>
