--- a/index.html
+++ b/index.html
@@ -8,34 +8,116 @@
   </head>
   <body>
     <header>
-      <h4>Quiz App</h4>
+      <h4>Friends Quiz App</h4>
     </header>
-    <main class="main-content">
-      <section class="card-section">
-        <article class="quiz-card --einstein">
-          <a class="card-title" href="#">Einstein</a>
-        </article>
-        <article class="quiz-card --alaska">
-          <a class="card-title" href="#">Alaska</a>
-        </article>
-        <article class="quiz-card --moon">
-          <a class="card-title" href="#">Moon</a>
-        </article>
-        <article class="quiz-card --sanfran">
-          <a class="card-title" href="#">San Francisco</a>
-        </article>
-        <article class="quiz-card --android">
-          <a class="card-title" href="#">Android</a>
-        </article>
-        <article class="quiz-card --nintendo">
-          <a class="card-title" href="#">Nintendo</a>
-        </article>
-        <article class="quiz-card --pantone">
-          <a class="card-title" href="#">Pantone</a>
-        </article>
-        <article class="quiz-card --microwave">
-          <a class="card-title" href="#">Microwave</a>
-        </article>
+    <main>
+      <section class="card" id="one">
+        <button class="card_bookmark">
+          <img src="assets/bookmark.svg" alt="bookmark" />
+        </button>
+        <p class="card_text">
+          What is the name of the coffee shop where the Friends gang frequently
+          hangs out?
+        </p>
+        <p class="tags">LOCATION</p>
+        <p class="tags">EASY</p>
+        <button class="cta_button">SHOW ANSWER</button>
+      </section>
+      <section class="card">
+        <button class="card_bookmark">
+          <img src="assets/bookmark.svg" alt="bookmark" />
+        </button>
+        <p class="card_text">
+          What is the surname of Ross and Monica, two of the main characters in
+          Friends?
+        </p>
+        <p class="tags">CHARACTERS</p>
+        <p class="tags">MEDIUM</p>
+        <button class="cta_button">SHOW ANSWER</button>
+      </section>
+      <section class="card">
+        <button class="card_bookmark">
+          <img src="assets/bookmark.svg" alt="bookmark" />
+        </button>
+        <p class="card_text">
+          Which character famously yelled "We were on a break!" during a
+          relationship dispute?
+        </p>
+        <p class="tags">CHARACTERS</p>
+        <p class="tags">EASY</p>
+        <button class="cta_button">SHOW ANSWER</button>
+      </section>
+      <section class="card">
+        <button class="card_bookmark">
+          <img src="assets/bookmark.svg" alt="bookmark" />
+        </button>
+        <p class="card_text">
+          What is the name of Phoebe's quirky, often nonsensical song about a
+          smelly cat?
+        </p>
+        <p class="tags">MUSIC</p>
+        <p class="tags">EASY</p>
+        <button class="cta_button">SHOW ANSWER</button>
+      </section>
+      <section class="card">
+        <button class="card_bookmark">
+          <img src="assets/bookmark.svg" alt="bookmark" />
+        </button>
+        <p class="card_text">What does Joey never share?</p>
+        <p class="tags">CHARACTERS</p>
+        <p class="tags">MEDIUM</p>
+        <button class="cta_button">SHOW ANSWER</button>
+      </section>
+      <section class="card">
+        <button class="card_bookmark">
+          <img src="assets/bookmark.svg" alt="bookmark" />
+        </button>
+        <p class="card_text">What is Chandler's last name?</p>
+        <p class="tags">CHARACTERS</p>
+        <p class="tags">EASY</p>
+        <button class="cta_button">SHOW ANSWER</button>
+      </section>
+      <section class="card">
+        <button class="card_bookmark">
+          <img src="assets/bookmark.svg" alt="bookmark" />
+        </button>
+        <p class="card_text">
+          Which character is a paleontologist by profession?
+        </p>
+        <p class="tags">JOBS</p>
+        <p class="tags">MEDIUM</p>
+        <button class="cta_button">SHOW ANSWER</button>
+      </section>
+      <section class="card">
+        <button class="card_bookmark">
+          <img src="assets/bookmark.svg" alt="bookmark" />
+        </button>
+        <p class="card_text">What is the name of Rachel's daughter?</p>
+        <p class="tags">CHARACTERS</p>
+        <p class="tags">MEDIUM</p>
+        <button class="cta_button">SHOW ANSWER</button>
+      </section>
+      <section class="card">
+        <button class="card_bookmark">
+          <img src="assets/bookmark.svg" alt="bookmark" />
+        </button>
+        <p class="card_text">
+          Which character famously says "How you doin'?" as a pick-up line?
+        </p>
+        <p class="tags">CHARACTERS</p>
+        <p class="tags">EASY</p>
+        <button class="cta_button">SHOW ANSWER</button>
+      </section>
+      <section class="card">
+        <button class="card_bookmark">
+          <img src="assets/bookmark.svg" alt="bookmark" />
+        </button>
+        <p class="card_text">
+          What is the profession of Chandler's wife, Monica?
+        </p>
+        <p class="tags">JOBS</p>
+        <p class="tags">MEDIUM</p>
+        <button class="cta_button">SHOW ANSWER</button>
       </section>
     </main>
     <footer class="footer">
