adjust layout + add styling for home tab

--- a/index.html
+++ b/index.html
@@ -3,127 +3,166 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Quiz App</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <header>
       <h4>Friends Quiz App</h4>
     </header>
-    <main>
-      <section class="card" id="one">
+    <main class="card-list">
+      <section class="card">
         <button class="card_bookmark">
-          <img src="assets/bookmark.svg" alt="bookmark" />
+          <img src="assets/trial.svg" alt="bookmark" />
         </button>
-        <p class="card_text">
+        <h2 class="card-title">Q #1</h2>
+        <p class="card-text">
           What is the name of the coffee shop where the Friends gang frequently
           hangs out?
         </p>
-        <p class="tags">LOCATION</p>
-        <p class="tags">EASY</p>
-        <button class="cta_button">SHOW ANSWER</button>
+        <div class="tags">
+          <span class="tag">Easy</span>
+          <span class="tag">Characters</span>
+        </div>
+        <button class="details-button">Show answer</button>
       </section>
+
       <section class="card">
         <button class="card_bookmark">
-          <img src="assets/bookmark.svg" alt="bookmark" />
+          <img src="assets/trial.svg" alt="bookmark" />
         </button>
-        <p class="card_text">
+        <h2 class="card-title">Q #2</h2>
+        <p class="card-text">
           What is the surname of Ross and Monica, two of the main characters in
           Friends?
         </p>
-        <p class="tags">CHARACTERS</p>
-        <p class="tags">MEDIUM</p>
-        <button class="cta_button">SHOW ANSWER</button>
+        <div class="tags">
+          <span class="tag">Easy</span>
+          <span class="tag">Characters</span>
+        </div>
+        <button class="details-button">Show answer</button>
       </section>
-      <section class="card">
+
+      <section class="card" id="three">
         <button class="card_bookmark">
-          <img src="assets/bookmark.svg" alt="bookmark" />
+          <img src="assets/trial.svg" alt="bookmark" />
         </button>
-        <p class="card_text">
+        <h2 class="card-title">Q #3</h2>
+        <p class="card-text">
           Which character famously yelled "We were on a break!" during a
           relationship dispute?
         </p>
-        <p class="tags">CHARACTERS</p>
-        <p class="tags">EASY</p>
-        <button class="cta_button">SHOW ANSWER</button>
+        <div class="tags">
+          <span class="tag">Easy</span>
+          <span class="tag">Characters</span>
+        </div>
+        <button class="details-button">Show answer</button>
       </section>
-      <section class="card">
+
+      <section class="card" id="four">
         <button class="card_bookmark">
-          <img src="assets/bookmark.svg" alt="bookmark" />
+          <img src="assets/trial.svg" alt="bookmark" />
         </button>
-        <p class="card_text">
+        <h2 class="card-title">Q #4</h2>
+        <p class="card-text">
           What is the name of Phoebe's quirky, often nonsensical song about a
           smelly cat?
         </p>
-        <p class="tags">MUSIC</p>
-        <p class="tags">EASY</p>
-        <button class="cta_button">SHOW ANSWER</button>
+        <div class="tags">
+          <span class="tag">Easy</span>
+          <span class="tag">Characters</span>
+        </div>
+        <button class="details-button">Show answer</button>
       </section>
-      <section class="card">
+
+      <section class="card" id="five">
         <button class="card_bookmark">
-          <img src="assets/bookmark.svg" alt="bookmark" />
+          <img src="assets/trial.svg" alt="bookmark" />
         </button>
-        <p class="card_text">What does Joey never share?</p>
-        <p class="tags">CHARACTERS</p>
-        <p class="tags">MEDIUM</p>
-        <button class="cta_button">SHOW ANSWER</button>
+        <h2 class="card-title">Q #5</h2>
+        <p class="card-text">What does Joey never share?</p>
+        <div class="tags">
+          <span class="tag">Easy</span>
+          <span class="tag">Characters</span>
+        </div>
+        <button class="details-button">Show answer</button>
       </section>
-      <section class="card">
+
+      <section class="card" id="six">
         <button class="card_bookmark">
-          <img src="assets/bookmark.svg" alt="bookmark" />
+          <img src="assets/trial.svg" alt="bookmark" />
         </button>
-        <p class="card_text">What is Chandler's last name?</p>
-        <p class="tags">CHARACTERS</p>
-        <p class="tags">EASY</p>
-        <button class="cta_button">SHOW ANSWER</button>
+        <h2 class="card-title">Q #6</h2>
+        <p class="card-text">What is Chandler's last name?</p>
+        <div class="tags">
+          <span class="tag">Easy</span>
+          <span class="tag">Characters</span>
+        </div>
+        <button class="details-button">Show answer</button>
       </section>
-      <section class="card">
+
+      <section class="card" id="seven">
         <button class="card_bookmark">
-          <img src="assets/bookmark.svg" alt="bookmark" />
+          <img src="assets/trial.svg" alt="bookmark" />
         </button>
-        <p class="card_text">
+        <h2 class="card-title">Q #7</h2>
+        <p class="card-text">
           Which character is a paleontologist by profession?
         </p>
-        <p class="tags">JOBS</p>
-        <p class="tags">MEDIUM</p>
-        <button class="cta_button">SHOW ANSWER</button>
+        <div class="tags">
+          <span class="tag">Easy</span>
+          <span class="tag">Characters</span>
+        </div>
+        <button class="details-button">Show answer</button>
       </section>
-      <section class="card">
+
+      <section class="card" id="eight">
         <button class="card_bookmark">
-          <img src="assets/bookmark.svg" alt="bookmark" />
+          <img src="assets/trial.svg" alt="bookmark" />
         </button>
-        <p class="card_text">What is the name of Rachel's daughter?</p>
-        <p class="tags">CHARACTERS</p>
-        <p class="tags">MEDIUM</p>
-        <button class="cta_button">SHOW ANSWER</button>
+        <h2 class="card-title">Q #8</h2>
+        <p class="card-text">What is the name of Rachel's daughter?</p>
+        <div class="tags">
+          <span class="tag">Easy</span>
+          <span class="tag">Characters</span>
+        </div>
+        <button class="details-button">Show answer</button>
       </section>
-      <section class="card">
+
+      <section class="card" id="nine">
         <button class="card_bookmark">
-          <img src="assets/bookmark.svg" alt="bookmark" />
+          <img src="assets/trial.svg" alt="bookmark" />
         </button>
-        <p class="card_text">
+        <h2 class="card-title">Q #9</h2>
+        <p class="card-text">
           Which character famously says "How you doin'?" as a pick-up line?
         </p>
-        <p class="tags">CHARACTERS</p>
-        <p class="tags">EASY</p>
-        <button class="cta_button">SHOW ANSWER</button>
+        <div class="tags">
+          <span class="tag">Easy</span>
+          <span class="tag">Characters</span>
+        </div>
+        <button class="details-button">Show answer</button>
       </section>
-      <section class="card">
+
+      <section class="card" id="ten">
         <button class="card_bookmark">
-          <img src="assets/bookmark.svg" alt="bookmark" />
+          <img src="assets/trial.svg" alt="bookmark" />
         </button>
-        <p class="card_text">
+        <h2 class="card-title">Q #10</h2>
+        <p class="card-text">
           What is the profession of Chandler's wife, Monica?
         </p>
-        <p class="tags">JOBS</p>
-        <p class="tags">MEDIUM</p>
-        <button class="cta_button">SHOW ANSWER</button>
+        <div class="tags">
+          <span class="tag">Easy</span>
+          <span class="tag">Characters</span>
+        </div>
+        <button class="details-button">Show answer</button>
       </section>
     </main>
     <footer class="footer">
-      <img src="./assets/home.svg" alt="Home" />
-      <img src="./assets/bookmark.svg" alt="Bookmarks" />
-      <img src="./assets/profile.svg" alt="Profile" />
+      <img src="./assets/home-selected.svg" alt="Home" />
+      <img src="./assets/bookmark-unselected.svg" alt="Bookmarks" />
+      <img src="./assets/profile-unselected.svg" alt="Profile" />
     </footer>
   </body>
 </html>
