--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main class="card-list">
       <section class="card">
         <button class="card_bookmark">
-          <img src="assets/trial.svg" alt="bookmark" />
+          <img src="assets/bookmark-unselected-card.svg" alt="bookmark" />
         </button>
         <h2 class="card-title">Q #1</h2>
         <p class="card-text">
@@ -29,7 +29,7 @@
 
       <section class="card">
         <button class="card_bookmark">
-          <img src="assets/trial.svg" alt="bookmark" />
+          <img src="assets/bookmark-unselected-card.svg" alt="bookmark" />
         </button>
         <h2 class="card-title">Q #2</h2>
         <p class="card-text">
@@ -45,7 +45,7 @@
 
       <section class="card" id="three">
         <button class="card_bookmark">
-          <img src="assets/trial.svg" alt="bookmark" />
+          <img src="assets/bookmark-unselected-card.svg" alt="bookmark" />
         </button>
         <h2 class="card-title">Q #3</h2>
         <p class="card-text">
@@ -61,7 +61,7 @@
 
       <section class="card" id="four">
         <button class="card_bookmark">
-          <img src="assets/trial.svg" alt="bookmark" />
+          <img src="assets/bookmark-unselected-card.svg" alt="bookmark" />
         </button>
         <h2 class="card-title">Q #4</h2>
         <p class="card-text">
@@ -77,7 +77,7 @@
 
       <section class="card" id="five">
         <button class="card_bookmark">
-          <img src="assets/trial.svg" alt="bookmark" />
+          <img src="assets/bookmark-unselected-card.svg" alt="bookmark" />
         </button>
         <h2 class="card-title">Q #5</h2>
         <p class="card-text">What does Joey never share?</p>
@@ -90,7 +90,7 @@
 
       <section class="card" id="six">
         <button class="card_bookmark">
-          <img src="assets/trial.svg" alt="bookmark" />
+          <img src="assets/bookmark-unselected-card.svg" alt="bookmark" />
         </button>
         <h2 class="card-title">Q #6</h2>
         <p class="card-text">What is Chandler's last name?</p>
@@ -103,7 +103,7 @@
 
       <section class="card" id="seven">
         <button class="card_bookmark">
-          <img src="assets/trial.svg" alt="bookmark" />
+          <img src="assets/bookmark-unselected-card.svg" alt="bookmark" />
         </button>
         <h2 class="card-title">Q #7</h2>
         <p class="card-text">
@@ -118,7 +118,7 @@
 
       <section class="card" id="eight">
         <button class="card_bookmark">
-          <img src="assets/trial.svg" alt="bookmark" />
+          <img src="assets/bookmark-unselected-card.svg" alt="bookmark" />
         </button>
         <h2 class="card-title">Q #8</h2>
         <p class="card-text">What is the name of Rachel's daughter?</p>
@@ -131,7 +131,7 @@
 
       <section class="card" id="nine">
         <button class="card_bookmark">
-          <img src="assets/trial.svg" alt="bookmark" />
+          <img src="assets/bookmark-unselected-card.svg" alt="bookmark" />
         </button>
         <h2 class="card-title">Q #9</h2>
         <p class="card-text">
@@ -146,7 +146,7 @@
 
       <section class="card" id="ten">
         <button class="card_bookmark">
-          <img src="assets/trial.svg" alt="bookmark" />
+          <img src="assets/bookmark-unselected-card.svg" alt="bookmark" />
         </button>
         <h2 class="card-title">Q #10</h2>
         <p class="card-text">
