add bookmarks page and tab bar navigation

--- a/index.html
+++ b/index.html
@@ -160,9 +160,15 @@
       </section>
     </main>
     <footer class="footer">
-      <img src="./assets/home-selected.svg" alt="Home" />
-      <img src="./assets/bookmark-unselected.svg" alt="Bookmarks" />
-      <img src="./assets/profile-unselected.svg" alt="Profile" />
+      <a href="index.html">
+        <img src="./assets/home-selected.svg" alt="Home" />
+      </a>
+      <a href="bookmarks.html">
+        <img src="./assets/bookmark-unselected.svg" alt="Bookmarks" />
+      </a>
+      <a href="profile.html">
+        <img src="./assets/profile-unselected.svg" alt="Profile" />
+      </a>
     </footer>
   </body>
 </html>
