BEM naming + missing answers + fix design issues

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -11,77 +11,58 @@
       <h4>Friends Quiz – Bookmarks</h4>
     </header>
     <main class="card-list">
-      <section class="card">
-        <button class="card_bookmark">
+      <section class="card" id="two">
+        <button class="card__bookmark">
           <img src="assets/bookmark-selected-card.svg" alt="bookmark" />
         </button>
-        <h2 class="card-title">Q #2</h2>
-        <p class="card-text">
-          What is the surname of Ross and Monica, two of the main characters in
-          Friends?
-        </p>
-        <div class="tags">
-          <span class="tag">Easy</span>
-          <span class="tag">Characters</span>
+        <h2 class="card__title">What is the surname of Ross and Monica?</h2>
+        <p class="card__answer">Geller</p>
+        <div class="card__card__tags">
+          <span class="card__tag">Easy</span>
+          <span class="card__tag">Characters</span>
         </div>
-        <button class="details-button">Show answer</button>
+        <button class="card__cta-button">Show answer</button>
       </section>
 
       <section class="card" id="four">
-        <button class="card_bookmark">
+        <button class="card__bookmark">
           <img src="assets/bookmark-selected-card.svg" alt="bookmark" />
         </button>
-        <h2 class="card-title">Q #4</h2>
-        <p class="card-text">
-          What is the name of Phoebe's quirky, often nonsensical song about a
-          smelly cat?
-        </p>
-        <div class="tags">
-          <span class="tag">Easy</span>
-          <span class="tag">Characters</span>
+        <h2 class="card__title">
+          What is the name of Phoebe's quirky song about a smelly cat?
+        </h2>
+        <p class="card__answer">Smelly Cat</p>
+        <div class="card__card__tags">
+          <span class="card__tag">Easy</span>
+          <span class="card__tag">Characters</span>
         </div>
-        <button class="details-button">Show answer</button>
+        <button class="card__cta-button">Show answer</button>
       </section>
 
       <section class="card" id="five">
-        <button class="card_bookmark">
+        <button class="card__bookmark">
           <img src="assets/bookmark-selected-card.svg" alt="bookmark" />
         </button>
-        <h2 class="card-title">Q #5</h2>
-        <p class="card-text">What does Joey never share?</p>
-        <div class="tags">
-          <span class="tag">Easy</span>
-          <span class="tag">Characters</span>
+        <h2 class="card__title">What does Joey never share?</h2>
+        <p class="card__answer">Food</p>
+        <div class="card__card__tags">
+          <span class="card__tag">Easy</span>
+          <span class="card__tag">Characters</span>
         </div>
-        <button class="details-button">Show answer</button>
+        <button class="card__cta-button">Show answer</button>
       </section>
 
       <section class="card" id="eight">
-        <button class="card_bookmark">
+        <button class="card__bookmark">
           <img src="assets/bookmark-selected-card.svg" alt="bookmark" />
         </button>
-        <h2 class="card-title">Q #8</h2>
-        <p class="card-text">What is the name of Rachel's daughter?</p>
-        <div class="tags">
-          <span class="tag">Easy</span>
-          <span class="tag">Characters</span>
+        <h2 class="card__title">What is the name of Rachel's daughter?</h2>
+        <p class="card__answer">Emma</p>
+        <div class="card__card__tags">
+          <span class="card__tag">Easy</span>
+          <span class="card__tag">Characters</span>
         </div>
-        <button class="details-button">Show answer</button>
-      </section>
-
-      <section class="card" id="ten">
-        <button class="card_bookmark">
-          <img src="assets/bookmark-selected-card.svg" alt="bookmark" />
-        </button>
-        <h2 class="card-title">Q #10</h2>
-        <p class="card-text">
-          What is the profession of Chandler's wife, Monica?
-        </p>
-        <div class="tags">
-          <span class="tag">Easy</span>
-          <span class="tag">Characters</span>
-        </div>
-        <button class="details-button">Show answer</button>
+        <button class="card__cta-button">Show answer</button>
       </section>
     </main>
     <footer class="footer">
