--- a/index.html
+++ b/index.html
@@ -7,158 +7,151 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <header>
-      <h4>Friends Quiz – Home</h4>
+    <header class="header">
+      <h4 class="header__title">Friends Quiz – Home</h4>
     </header>
     <main class="card-list">
-      <section class="card">
-        <button class="card_bookmark">
+      <section class="card" id="one">
+        <button class="card__bookmark">
           <img src="assets/bookmark-unselected-card.svg" alt="bookmark" />
         </button>
-        <h2 class="card-title">Q #1</h2>
-        <p class="card-text">
-          What is the name of the coffee shop where the Friends gang frequently
-          hangs out?
-        </p>
-        <div class="tags">
-          <span class="tag">Easy</span>
-          <span class="tag">Characters</span>
+        <h2 class="card__title">
+          What is name of the coffee shop where the Friends hang out?
+        </h2>
+        <p class="card__answer">Central Perk</p>
+        <div class="card__tags">
+          <span class="card__tag">Easy</span>
+          <span class="card__tag">Characters</span>
         </div>
-        <button class="details-button">Show answer</button>
+        <button class="card__cta-button">Show answer</button>
       </section>
 
-      <section class="card">
-        <button class="card_bookmark">
+      <section class="card" id="two">
+        <button class="card__bookmark">
           <img src="assets/bookmark-unselected-card.svg" alt="bookmark" />
         </button>
-        <h2 class="card-title">Q #2</h2>
-        <p class="card-text">
-          What is the surname of Ross and Monica, two of the main characters in
-          Friends?
-        </p>
-        <div class="tags">
-          <span class="tag">Easy</span>
-          <span class="tag">Characters</span>
+        <h2 class="card__title">What is the surname of Ross and Monica?</h2>
+        <p class="card__answer">Geller</p>
+        <div class="card__tags">
+          <span class="card__tag">Easy</span>
+          <span class="card__tag">Characters</span>
         </div>
-        <button class="details-button">Show answer</button>
+        <button class="card__cta-button">Show answer</button>
       </section>
 
       <section class="card" id="three">
-        <button class="card_bookmark">
+        <button class="card__bookmark">
           <img src="assets/bookmark-unselected-card.svg" alt="bookmark" />
         </button>
-        <h2 class="card-title">Q #3</h2>
-        <p class="card-text">
-          Which character famously yelled "We were on a break!" during a
-          relationship dispute?
-        </p>
-        <div class="tags">
-          <span class="tag">Easy</span>
-          <span class="tag">Characters</span>
+        <h2 class="card__title">
+          Which of the 50 U.S. states could Ross not name?
+        </h2>
+        <p class="card__answer">Delaware</p>
+        <div class="card__tags">
+          <span class="card__tag">Hard</span>
+          <span class="card__tag">Characters</span>
         </div>
-        <button class="details-button">Show answer</button>
+        <button class="card__cta-button">Show answer</button>
       </section>
 
       <section class="card" id="four">
-        <button class="card_bookmark">
+        <button class="card__bookmark">
           <img src="assets/bookmark-unselected-card.svg" alt="bookmark" />
         </button>
-        <h2 class="card-title">Q #4</h2>
-        <p class="card-text">
-          What is the name of Phoebe's quirky, often nonsensical song about a
-          smelly cat?
-        </p>
-        <div class="tags">
-          <span class="tag">Easy</span>
-          <span class="tag">Characters</span>
+        <h2 class="card__title">
+          What is the name of Phoebe's quirky song about a smelly cat?
+        </h2>
+        <p class="card__answer">Smelly Cat</p>
+        <div class="card__tags">
+          <span class="card__tag">Easy</span>
+          <span class="card__tag">Characters</span>
         </div>
-        <button class="details-button">Show answer</button>
+        <button class="card__cta-button">Show answer</button>
       </section>
 
       <section class="card" id="five">
-        <button class="card_bookmark">
+        <button class="card__bookmark">
           <img src="assets/bookmark-unselected-card.svg" alt="bookmark" />
         </button>
-        <h2 class="card-title">Q #5</h2>
-        <p class="card-text">What does Joey never share?</p>
-        <div class="tags">
-          <span class="tag">Easy</span>
-          <span class="tag">Characters</span>
+        <h2 class="card__title">What does Joey never share?</h2>
+        <p class="card__answer">Food</p>
+        <div class="card__tags">
+          <span class="card__tag">Easy</span>
+          <span class="card__tag">Characters</span>
         </div>
-        <button class="details-button">Show answer</button>
+        <button class="card__cta-button">Show answer</button>
       </section>
 
       <section class="card" id="six">
-        <button class="card_bookmark">
+        <button class="card__bookmark">
           <img src="assets/bookmark-unselected-card.svg" alt="bookmark" />
         </button>
-        <h2 class="card-title">Q #6</h2>
-        <p class="card-text">What is Chandler's last name?</p>
-        <div class="tags">
-          <span class="tag">Easy</span>
-          <span class="tag">Characters</span>
+        <h2 class="card__title">What is Chandler's last name?</h2>
+        <p class="card__answer">Bing</p>
+        <div class="card__tags">
+          <span class="card__tag">Easy</span>
+          <span class="card__tag">Characters</span>
         </div>
-        <button class="details-button">Show answer</button>
+        <button class="card__cta-button">Show answer</button>
       </section>
 
       <section class="card" id="seven">
-        <button class="card_bookmark">
+        <button class="card__bookmark">
           <img src="assets/bookmark-unselected-card.svg" alt="bookmark" />
         </button>
-        <h2 class="card-title">Q #7</h2>
-        <p class="card-text">
+        <h2 class="card__title">
           Which character is a paleontologist by profession?
-        </p>
-        <div class="tags">
-          <span class="tag">Easy</span>
-          <span class="tag">Characters</span>
+        </h2>
+        <p class="card__answer">Ross</p>
+        <div class="card__tags">
+          <span class="card__tag">Easy</span>
+          <span class="card__tag">Characters</span>
         </div>
-        <button class="details-button">Show answer</button>
+        <button class="card__cta-button">Show answer</button>
       </section>
 
       <section class="card" id="eight">
-        <button class="card_bookmark">
+        <button class="card__bookmark">
           <img src="assets/bookmark-unselected-card.svg" alt="bookmark" />
         </button>
-        <h2 class="card-title">Q #8</h2>
-        <p class="card-text">What is the name of Rachel's daughter?</p>
-        <div class="tags">
-          <span class="tag">Easy</span>
-          <span class="tag">Characters</span>
+        <h2 class="card__title">What is the name of Rachel's daughter?</h2>
+        <p class="card__answer">Emma</p>
+        <div class="card__tags">
+          <span class="card__tag">Easy</span>
+          <span class="card__tag">Characters</span>
         </div>
-        <button class="details-button">Show answer</button>
+        <button class="card__cta-button">Show answer</button>
       </section>
 
       <section class="card" id="nine">
-        <button class="card_bookmark">
+        <button class="card__bookmark">
           <img src="assets/bookmark-unselected-card.svg" alt="bookmark" />
         </button>
-        <h2 class="card-title">Q #9</h2>
-        <p class="card-text">
-          Which character famously says "How you doin'?" as a pick-up line?
-        </p>
-        <div class="tags">
-          <span class="tag">Easy</span>
-          <span class="tag">Characters</span>
+        <h2 class="card__title">
+          How much money do the Friends win in the Powerball lottery?
+        </h2>
+        <p class="card__answer">$3</p>
+        <div class="card__tags">
+          <span class="card__tag">Hard</span>
+          <span class="card__tag">Numbers</span>
         </div>
-        <button class="details-button">Show answer</button>
+        <button class="card__cta-button">Show answer</button>
       </section>
 
       <section class="card" id="ten">
-        <button class="card_bookmark">
+        <button class="card__bookmark">
           <img src="assets/bookmark-unselected-card.svg" alt="bookmark" />
         </button>
-        <h2 class="card-title">Q #10</h2>
-        <p class="card-text">
-          What is the profession of Chandler's wife, Monica?
-        </p>
-        <div class="tags">
-          <span class="tag">Easy</span>
-          <span class="tag">Characters</span>
+        <h2 class="card__title">What is the profession of Chandler's wife?</h2>
+        <p class="card__answer">Chef</p>
+        <div class="card__tags">
+          <span class="card__tag">Easy</span>
+          <span class="card__tag">Characters</span>
         </div>
-        <button class="details-button">Show answer</button>
+        <button class="card__cta-button">Show answer</button>
       </section>
     </main>
+
     <footer class="footer">
       <a href="index.html">
         <img src="./assets/home-selected.svg" alt="Home" />
