--- a/profile.html
+++ b/profile.html
@@ -23,17 +23,17 @@
       <p class="profile-card_text">
         Hi, my name is Zoey and I like everything quizzable. Let's play!
       </p>
-      <section class="tags">
-        <button class="tag">
-          <img src="assets/location_tag.svg" alt="bookmark" />
+      <section class="profile__tags">
+        <button class="profile__tag">
+          <img src="assets/location_tag.svg" alt="location" />
         </button>
-        <button class="tag">
+        <button class="profile__tag">
           <img src="assets/level_tag.svg" alt="level" />
         </button>
-        <button class="tag">
-          <img src="assets/exp-tag.svg" alt="exp" />
+        <button class="profile__tag">
+          <img src="assets/exp-tag.svg" alt="experience" />
         </button>
-        <button class="tag">
+        <button class="profile__tag">
           <img src="assets/bookmarks-tag.svg" alt="bookmarks" />
         </button>
       </section>
