add toggle functionality + design bug fixes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="header">
-      <h4 class="header__title">Friends Quiz – Home</h4>
+      <h4 class="header__title">Friends Quiz</h4>
     </header>
     <main class="card-list">
       <section class="card" id="one">
