--- a/profile.html
+++ b/profile.html
@@ -40,23 +40,26 @@
       <h5 class="settings-title">Settings</h5>
       <section class="dark_mode-settings">
         <h2 class="settings_subtitle">Dark Mode</h2>
-        <button class="toggle">
-          <img src="assets/toggle-off.svg" alt="toggle-off" />
-        </button>
+        <label class="custom-toggle">
+          <input type="checkbox" id="dark-mode-toggle" />
+          <span class="slider"></span>
+        </label>
       </section>
 
       <section class="multi_play-settings">
         <h2 class="settings_subtitle">Multi-Play</h2>
-        <button class="toggle">
-          <img src="assets/toggle-on.svg" alt="toggle-on" />
-        </button>
+        <label class="custom-toggle">
+          <input type="checkbox" id="multi-play-toggle" />
+          <span class="slider"></span>
+        </label>
       </section>
 
       <section class="tracking-settings">
         <h2 class="settings_subtitle">Tracking</h2>
-        <button class="toggle">
-          <img src="assets/toggle-on.svg" alt="toggle-on" />
-        </button>
+        <label class="custom-toggle">
+          <input type="checkbox" id="tracking-toggle" />
+          <span class="slider"></span>
+        </label>
       </section>
     </main>
     <footer class="footer">
