--- a/bookmarks.html
+++ b/bookmarks.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h4>Friends Quiz – Bookmarks</h4>
+      <h4>Bookmarks</h4>
     </header>
     <main class="card-list">
       <section class="card" id="two">
