add initial javascript files and functionality

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -10,60 +10,7 @@
     <header>
       <h4>Bookmarks</h4>
     </header>
-    <main class="card-list">
-      <section class="card" id="two">
-        <button class="card__bookmark">
-          <img src="assets/bookmark-selected-card.svg" alt="bookmark" />
-        </button>
-        <h2 class="card__title">What is the surname of Ross and Monica?</h2>
-        <p class="card__answer">Geller</p>
-        <div class="card__card__tags">
-          <span class="card__tag">Easy</span>
-          <span class="card__tag">Characters</span>
-        </div>
-        <button class="card__cta-button">Show answer</button>
-      </section>
-
-      <section class="card" id="four">
-        <button class="card__bookmark">
-          <img src="assets/bookmark-selected-card.svg" alt="bookmark" />
-        </button>
-        <h2 class="card__title">
-          What is the name of Phoebe's quirky song about a smelly cat?
-        </h2>
-        <p class="card__answer">Smelly Cat</p>
-        <div class="card__card__tags">
-          <span class="card__tag">Easy</span>
-          <span class="card__tag">Characters</span>
-        </div>
-        <button class="card__cta-button">Show answer</button>
-      </section>
-
-      <section class="card" id="five">
-        <button class="card__bookmark">
-          <img src="assets/bookmark-selected-card.svg" alt="bookmark" />
-        </button>
-        <h2 class="card__title">What does Joey never share?</h2>
-        <p class="card__answer">Food</p>
-        <div class="card__card__tags">
-          <span class="card__tag">Easy</span>
-          <span class="card__tag">Characters</span>
-        </div>
-        <button class="card__cta-button">Show answer</button>
-      </section>
-
-      <section class="card" id="eight">
-        <button class="card__bookmark">
-          <img src="assets/bookmark-selected-card.svg" alt="bookmark" />
-        </button>
-        <h2 class="card__title">What is the name of Rachel's daughter?</h2>
-        <p class="card__answer">Emma</p>
-        <div class="card__card__tags">
-          <span class="card__tag">Easy</span>
-          <span class="card__tag">Characters</span>
-        </div>
-        <button class="card__cta-button">Show answer</button>
-      </section>
+    <section class="cards-section quiz-questions"></section>
     </main>
     <footer class="footer">
       <a href="index.html">
@@ -77,4 +24,5 @@
       </a>
     </footer>
   </body>
+  <script type="module" rel="javascript" src="./js/bookmarks.js"></script>
 </html>
