update navbar to add form page

--- a/profile.html
+++ b/profile.html
@@ -63,15 +63,20 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="index.html">
-        <img src="./assets/home-unselected.svg" alt="Home" />
-      </a>
-      <a href="bookmarks.html">
-        <img src="./assets/bookmark-unselected.svg" alt="Bookmarks" />
-      </a>
-      <a href="profile.html">
-        <img src="./assets/profile-selected.svg" alt="Profile" />
-      </a>
+      <footer class="footer">
+        <a href="index.html">
+          <img src="./assets/home-unselected.svg" alt="Home" />
+        </a>
+        <a href="bookmarks.html">
+          <img src="./assets/bookmark-unselected.svg" alt="Bookmarks" />
+        </a>
+        <a href="form.html">
+          <img src="./assets/add-unselected.svg" alt="Bookmarks" />
+        </a>
+        <a href="profile.html">
+          <img src="./assets/profile-selected.svg" alt="Profile" />
+        </a>
+      </footer>
     </footer>
   </body>
 </html>
