--- a/bookmarks.html
+++ b/bookmarks.html
@@ -19,6 +19,9 @@
       <a href="bookmarks.html">
         <img src="./assets/bookmark_selected.svg" alt="Bookmarks" />
       </a>
+      <a href="form.html">
+        <img src="./assets/add-unselected.svg" alt="Bookmarks" />
+      </a>
       <a href="profile.html">
         <img src="./assets/profile-unselected.svg" alt="Profile" />
       </a>
