add form + styling

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       <a href="bookmarks.html">
         <img src="./assets/bookmark-unselected.svg" alt="Bookmarks" />
       </a>
+      <a href="form.html">
+        <img src="./assets/add-unselected.svg" alt="Bookmarks" />
+      </a>
       <a href="profile.html">
         <img src="./assets/profile-unselected.svg" alt="Profile" />
       </a>
