--- a/form.html
+++ b/form.html
@@ -5,11 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz App</title>
     <link rel="stylesheet" href="./styles.css" />
+    <script src="./js/form.js" defer></script>
   </head>
   <body>
     <header class="header">
       <h4 class="header__title">Add Questions</h4>
     </header>
+    <form data-js="form">
+      <fieldset>
+        <section class="user-question">
+          <label for="user-question">Question:</label>
+          <textarea
+            data-js="user-question"
+            id="userQuestion"
+            rows="10"
+            cols="50"
+            maxlength="150"
+            placeholder="Enter your question here"
+          ></textarea>
+          <p class="remaining-characters-question">
+            <span data-js="remaining-characters-question">150</span>
+            characters left
+          </p>
+        </section>
+        <section class="user-answer">
+          <label for="user-answer">Answer:</label>
+          <textarea
+            data-js="user-answer"
+            id="userAnswer"
+            rows="10"
+            cols="50"
+            maxlength="150"
+            placeholder="Enter your question here"
+          ></textarea>
+          <p class="remaining-characters-answer">
+            <span data-js="remaining-characters-answer">150</span>
+            characters left
+          </p>
+        </section>
+        <section class="user-tag">
+          <label for="user-tag">Tag:</label>
+          <input type="text" id="user-tag" />
+        </section>
+      </fieldset>
+      <button type="submit" class="submit-button">Submit</button>
+    </form>
     <footer class="footer">
       <footer class="footer">
         <a href="index.html">
