--- a/form.html
+++ b/form.html
@@ -14,14 +14,14 @@
     <form data-js="form">
       <fieldset>
         <section class="user-question">
-          <label for="user-question">Question:</label>
+          <label for="user-question">Question</label>
           <textarea
             data-js="user-question"
             id="userQuestion"
             rows="5"
             cols="50"
             maxlength="150"
-            placeholder="Enter your question here"
+            placeholder="Yr question"
           ></textarea>
           <p class="remaining-characters-question">
             <span data-js="remaining-characters-question">150</span>
@@ -29,14 +29,14 @@
           </p>
         </section>
         <section class="user-answer">
-          <label for="user-answer">Answer:</label>
+          <label for="user-answer">Answer</label>
           <textarea
             data-js="user-answer"
             id="userAnswer"
             rows="5"
             cols="50"
             maxlength="150"
-            placeholder="Enter your question here"
+            placeholder="Yr answer"
           ></textarea>
           <p class="remaining-characters-answer">
             <span data-js="remaining-characters-answer">150</span>
@@ -44,8 +44,8 @@
           </p>
         </section>
         <section class="user-tag">
-          <label for="user-tag">Tag:</label>
-          <input type="text" id="user-tag" />
+          <label for="user-tag">Tag</label>
+          <input type="text" id="user-tag" placeholder="1 tag only" />
         </section>
       </fieldset>
       <button type="submit" class="submit-button">Submit</button>
