--- a/form.html
+++ b/form.html
@@ -21,7 +21,6 @@
             rows="5"
             cols="50"
             maxlength="150"
-            placeholder="Yr question"
           ></textarea>
           <p class="remaining-characters-question">
             <span data-js="remaining-characters-question">150</span>
@@ -36,7 +35,6 @@
             rows="5"
             cols="50"
             maxlength="150"
-            placeholder="Yr answer"
           ></textarea>
           <p class="remaining-characters-answer">
             <span data-js="remaining-characters-answer">150</span>
@@ -45,7 +43,7 @@
         </section>
         <section class="user-tag">
           <label for="user-tag">Tag</label>
-          <input type="text" id="user-tag" placeholder="1 tag only" />
+          <input type="text" id="user-tag" />
         </section>
       </fieldset>
       <button type="submit" class="submit-button">Submit</button>
