--- a/bookmarks.html
+++ b/bookmarks.html
@@ -10,7 +10,66 @@
     <header>
       <h4>Bookmarks</h4>
     </header>
-    <section class="cards-section quiz-questions"></section>
+    <main class="card-list">
+      <section class="card" id="one">
+        <button class="card__bookmark" data-js="bookmark-button">
+          <img src="assets/bookmark-selected-card.svg" alt="bookmark" />
+        </button>
+        <h2 class="card__title">
+          What is name of the coffee shop where the Friends hang out?
+        </h2>
+        <div class="card__tags">
+          <span class="card__tag">Easy</span>
+          <span class="card__tag">Geography</span>
+          <span class="card__tag">Trivia</span>
+        </div>
+        <p class="card__answer hidden" data-js="answer-text">Central Perk</p>
+        <button class="card__cta-button" data-js="show-answer-btn">
+          Show answer
+        </button>
+      </section>
+
+      <section class="card" id="four">
+        <button class="card__bookmark">
+          <img src="assets/bookmark-selected-card.svg" alt="bookmark" />
+        </button>
+        <h2 class="card__title">
+          What is the name of Phoebe's quirky song about a smelly cat?
+        </h2>
+        <div class="card__tags">
+          <span class="card__tag">Easy</span>
+          <span class="card__tag">Characters</span>
+          <span class="card__tag">Pets</span>
+        </div>
+        <p class="card__answer hidden">Smelly Cat</p>
+        <button class="card__cta-button">Show answer</button>
+      </section>
+
+      <section class="card" id="five">
+        <button class="card__bookmark">
+          <img src="assets/bookmark-selected-card.svg" alt="bookmark" />
+        </button>
+        <h2 class="card__title">What does Joey never share?</h2>
+        <div class="card__tags">
+          <span class="card__tag">Easy</span>
+          <span class="card__tag">Characters</span>
+        </div>
+        <p class="card__answer hidden">Food</p>
+        <button class="card__cta-button">Show answer</button>
+      </section>
+
+      <section class="card" id="eight">
+        <button class="card__bookmark">
+          <img src="assets/bookmark-selected-card.svg" alt="bookmark" />
+        </button>
+        <h2 class="card__title">What is the name of Rachel's daughter?</h2>
+        <div class="card__tags">
+          <span class="card__tag">Easy</span>
+          <span class="card__tag">Characters</span>
+        </div>
+        <p class="card__answer hidden">Emma</p>
+        <button class="card__cta-button">Show answer</button>
+      </section>
     </main>
     <footer class="footer">
       <a href="index.html">
@@ -27,5 +86,4 @@
       </a>
     </footer>
   </body>
-  <script type="module" rel="javascript" src="./js/bookmarks.js"></script>
 </html>
