--- a/index.html
+++ b/index.html
@@ -10,7 +10,153 @@
     <header class="header">
       <h4 class="header__title">Friends Quiz</h4>
     </header>
-    <section class="cards-section quiz-questions"></section>
+    <main class="card-list">
+      <section class="card" id="one">
+        <button class="card__bookmark" data-js="bookmark-button">
+          <img src="assets/bookmark-unselected-card.svg" alt="bookmark" />
+        </button>
+        <h2 class="card__title">
+          What is name of the coffee shop where the Friends hang out?
+        </h2>
+        <div class="card__tags">
+          <span class="card__tag">Easy</span>
+          <span class="card__tag">Geography</span>
+          <span class="card__tag">Trivia</span>
+        </div>
+        <p class="card__answer hidden" data-js="answer-text">Central Perk</p>
+        <button class="card__cta-button" data-js="show-answer-btn">
+          Show answer
+        </button>
+      </section>
+
+      <section class="card" id="two">
+        <button class="card__bookmark">
+          <img src="assets/bookmark-unselected-card.svg" alt="bookmark" />
+        </button>
+        <h2 class="card__title">What is the surname of Ross and Monica?</h2>
+        <div class="card__tags">
+          <span class="card__tag">Easy</span>
+          <span class="card__tag">Characters</span>
+        </div>
+        <p class="card__answer hidden">Geller</p>
+        <button class="card__cta-button">Show answer</button>
+      </section>
+
+      <section class="card" id="three">
+        <button class="card__bookmark">
+          <img src="assets/bookmark-unselected-card.svg" alt="bookmark" />
+        </button>
+        <h2 class="card__title">
+          Which of the 50 U.S. states could Ross not name?
+        </h2>
+        <div class="card__tags">
+          <span class="card__tag">Hard</span>
+          <span class="card__tag">Geography</span>
+          <span class="card__tag">Characters</span>
+        </div>
+        <p class="card__answer hidden">Delaware</p>
+        <button class="card__cta-button">Show answer</button>
+      </section>
+
+      <section class="card" id="four">
+        <button class="card__bookmark">
+          <img src="assets/bookmark-unselected-card.svg" alt="bookmark" />
+        </button>
+        <h2 class="card__title">
+          What is the name of Phoebe's quirky song about a smelly cat?
+        </h2>
+        <div class="card__tags">
+          <span class="card__tag">Easy</span>
+          <span class="card__tag">Characters</span>
+          <span class="card__tag">Pets</span>
+        </div>
+        <p class="card__answer hidden">Smelly Cat</p>
+        <button class="card__cta-button">Show answer</button>
+      </section>
+
+      <section class="card" id="five">
+        <button class="card__bookmark">
+          <img src="assets/bookmark-unselected-card.svg" alt="bookmark" />
+        </button>
+        <h2 class="card__title">What does Joey never share?</h2>
+        <div class="card__tags">
+          <span class="card__tag">Easy</span>
+          <span class="card__tag">Characters</span>
+        </div>
+        <p class="card__answer hidden">Food</p>
+        <button class="card__cta-button">Show answer</button>
+      </section>
+
+      <section class="card" id="six">
+        <button class="card__bookmark">
+          <img src="assets/bookmark-unselected-card.svg" alt="bookmark" />
+        </button>
+        <h2 class="card__title">What is Chandler's last name?</h2>
+        <div class="card__tags">
+          <span class="card__tag">Easy</span>
+          <span class="card__tag">Characters</span>
+        </div>
+        <p class="card__answer hidden">Bing</p>
+        <button class="card__cta-button">Show answer</button>
+      </section>
+
+      <section class="card" id="seven">
+        <button class="card__bookmark">
+          <img src="assets/bookmark-unselected-card.svg" alt="bookmark" />
+        </button>
+        <h2 class="card__title">
+          Which character is a paleontologist by profession?
+        </h2>
+        <div class="card__tags">
+          <span class="card__tag">Easy</span>
+          <span class="card__tag">Characters</span>
+        </div>
+        <p class="card__answer hidden">Ross</p>
+        <button class="card__cta-button">Show answer</button>
+      </section>
+
+      <section class="card" id="eight">
+        <button class="card__bookmark">
+          <img src="assets/bookmark-unselected-card.svg" alt="bookmark" />
+        </button>
+        <h2 class="card__title">What is the name of Rachel's daughter?</h2>
+        <div class="card__tags">
+          <span class="card__tag">Easy</span>
+          <span class="card__tag">Characters</span>
+        </div>
+        <p class="card__answer hidden">Emma</p>
+        <button class="card__cta-button">Show answer</button>
+      </section>
+
+      <section class="card" id="nine">
+        <button class="card__bookmark">
+          <img src="assets/bookmark-unselected-card.svg" alt="bookmark" />
+        </button>
+        <h2 class="card__title">
+          How much money do the Friends win in the Powerball lottery?
+        </h2>
+        <div class="card__tags">
+          <span class="card__tag">Hard</span>
+          <span class="card__tag">Numbers</span>
+        </div>
+        <p class="card__answer hidden">$3</p>
+        <button class="card__cta-button">Show answer</button>
+      </section>
+
+      <section class="card" id="ten">
+        <button class="card__bookmark">
+          <img src="assets/bookmark-unselected-card.svg" alt="bookmark" />
+        </button>
+        <h2 class="card__title">What is the profession of Chandler's wife?</h2>
+        <div class="card__tags">
+          <span class="card__tag">Easy</span>
+          <span class="card__tag">Characters</span>
+          <span class="card__tag">Trivia</span>
+        </div>
+        <p class="card__answer hidden">Chef</p>
+        <button class="card__cta-button">Show answer</button>
+      </section>
+    </main>
     <footer class="footer">
       <a href="index.html">
         <img src="./assets/home-selected.svg" alt="Home" />
@@ -26,5 +172,5 @@
       </a>
     </footer>
   </body>
-  <script type="module" rel="javascript" src="./js/index.js"></script>
+  <script src="js/index.js"></script>
 </html>
